# festapi

./: .coverage  .gitignore  README.md  gitignore  pyproject.toml
.github/workflows/: pipeline.yml
festapi/: app.py  database.py  models.py  schemas.py  security.py
festapi/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 25eb3b089cfa_create_users_table.py  3426087e1521_created_at_and_updated_at_in_todo.py  3f985ee96ecb_create_todos_table.py
templates/: helloworld.html
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todo.py  test_users.py
