[tool.poetry]
name = "festapi"
version = "0.1.0"
description = ""
authors = ["santosc137 <cs@moray.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.4"
fastapi = "^0.111.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.10"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'


[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'

format = 'ruff check . --fix && ruff format .'
run = 'fastapi dev festapi/app.py'

pre_test = 'task lint'
test = 'pytest -s -x --cov=festapi -vv'
post_test = 'coverage html'